--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
