--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.26.2",
     "concurrently": "^6.2.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -21,7 +22,6 @@
     "google-auth-library": "^7.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
-    "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "open": "^8.2.1",
     "uuid": "^8.3.2",
