--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.10.1",
+    "react-multi-carousel": "^2.6.3",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
