--- a/backend/package.json
+++ b/backend/package.json
@@ -22,10 +22,7 @@
     "google-auth-library": "^7.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
-    "node-fetch": "^2.6.1",
-    "open": "^8.2.1",
-    "uuid": "^8.3.2",
-    "youtube-api": "^3.0.1"
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
